# expectllm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: README.md  basic_yesno.py  classification.py  code_review.py  data_extraction.py  extract_json.py  retry_pattern.py
src/expectllm/: __init__.py  conversation.py  errors.py
src/llmexpect/: __init__.py  conversation.py  errors.py  providers.py
tests/: __init__.py  conftest.py  test_conversation.py  test_errors.py  test_integration.py  test_providers.py  test_stress.py
